styles/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

/* Font family */
@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@200;300;400;500;600;700;800;900;1000&display=swap');

/* Making default font family */
body {
  font-family: 'Nunito', sans-serif;
}

#__next {
  height: 100vh;
  display: grid;
  grid-template-rows: 76px auto;
}

/* scrollable */

.scrollColorDark {
  overflow-y: scroll;
}

/* width */

.scrollColorDark::-webkit-scrollbar {
  width: 8px;
}

/* Track */

.scrollColorDark::-webkit-scrollbar-track {
  background: transparent;
}

/* Handle */

.scrollColorDark::-webkit-scrollbar-thumb {
  background: #202c46;
  border-radius: 20px;
}

/* Handle on hover */

.scrollColorDark::-webkit-scrollbar-thumb:hover {
  background: #304269;
}

.scrollColorLight {
  overflow-y: scroll;
}

/* width */

.scrollColorLight::-webkit-scrollbar {
  width: 8px;
}

/* Track */

.scrollColorLight::-webkit-scrollbar-track {
  background: transparent;
}

/* Handle */

.scrollColorLight::-webkit-scrollbar-thumb {
  background: #bbb;
  border-radius: 20px;
}

/* Handle on hover */

.scrollColorLight::-webkit-scrollbar-thumb:hover {
  background: #aaa;
}


@media (min-width: 992px) {
  .coming-soon 
{
  text-align: center;
  top:220px;
  position: relative;
}

 .cardlist
 {
  left:100px;
  position: relative;
 }
}

@media (max-width: 800px) {
  .coming-soon 
{
  text-align: center;
  top:150px;
  position: relative;
}
}

